--- a/theme.css
+++ b/theme.css
@@ -22,6 +22,11 @@ body.light-theme {
     --btn-background-color: #4F3674;
     --btn-hover-color: #4F3674;
     --input-border-color: #ccc;
+    --table-header-background-color: #4F3674;
+    --table-header-color: #fff;
+    --table-border-color: #ddd;
+    --table-hover-background-color: #D6A800;
+    --table-hover-color: #4F3674;
 }
 
 body.dark-theme {
@@ -41,8 +46,12 @@ body.dark-theme {
     --btn-background-color: #7d4787;
     --btn-hover-color: #fff;
     --input-border-color: #303030;
+    --table-header-background-color:#D176E1;
+    --table-header-color: #fff;
+    --table-border-color: #303030;
+    --table-hover-background-color: #7d4787;
+    --table-hover-color: #fff;
 }
-
 
 body {
     color: var(--text-color);
@@ -137,4 +146,30 @@ input{
 .link-styles:hover {
     background-color: #D6A800;
     
+}
+
+table {
+    border-collapse: collapse;
+    margin-bottom: 30px;
+}
+
+th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    color: var(--table-header-color);
+    background-color: var(--table-header-background-color);
+}
+
+
+td, th {
+    border: 1px solid #ddd;
+    padding: 8px;
+	border-color: var(--table-border-color);
+}
+
+tr:hover {
+    background-color: var(--table-hover-background-color);
+    color: var(--table-hover-color);
+    cursor: pointer;
 }
